--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,13 @@ img {
     width: 70%;
     }
 
-
+h2 {
+  padding: 20px;
+  margin: 50px;
+  font-size: 50px;
+  font-style: helvetia;
+  color: green;
+}
 
 
 
